# photo-backup

./: .gitignore  README.md  autocrop.py  compose.sh  pyproject.toml  regions.json.template
